<resources>
  <string name="app_name">MyLittleHeroESGI</string>
  <string name="hello_world">Hello World !</string>
  <string name="activity_home_start_btn">START</string>
  <string name="activity_create_player_title">Create player</string>
  <string name="activity_create_player_pseudo_hint">Pseudo</string>
  <string name="activity_create_player_radio_button_male">male</string>
  <string name="activity_create_player_radio_button_female">female</string>
  <string name="activity_create_player_birthdate_hint">Birthdate</string>
  <string name="activity_create_player_next_button">NEXT</string>
  <string name="activity_choose_weapon_title">Choose weapon</string>
    <string name="player">Player :</string>
  <string name="pseudo">Pseudo :</string>
  <string name="gender">Gender :</string>
  <string name="birthdate">Birthdate :</string>
  <string name="weapon">Weapon :</string>
  <string name="next">NEXT</string>
  <string name="confirm">CONFIRM</string>
</resources>
