<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.ShowInformation"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:id="@+id/activity_show_information_title"
        android:text="@string/player"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="100dp"
        android:id="@+id/activity_show_information_pseudo_label"
        android:text="@string/pseudo"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-27sp"
        android:layout_marginStart="230dp"
        android:id="@+id/activity_show_information_pseudo"
        android:text="None"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="100dp"
        android:id="@+id/activity_show_information_gender_label"
        android:text="@string/gender"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-27dp"
        android:layout_marginStart="230dp"
        android:id="@+id/activity_show_information_gendre"
        android:text="None"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="100dp"
        android:id="@+id/activity_show_information_birthdate_label"
        android:text="@string/birthdate"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-27dp"
        android:layout_marginStart="230dp"
        android:id="@+id/activity_show_information_birthdate"
        android:text="None"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="100dp"
        android:id="@+id/activity_show_information_weapon_label"
        android:text="@string/weapon"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-27dp"
        android:layout_marginStart="230dp"
        android:id="@+id/activity_show_information_weapon_name"
        android:text="None"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:id="@+id/activity_show_information_choosen_weapon"/>
    <Button
        android:id="@+id/activity_show_information_next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/confirm"
        />

</LinearLayout>